Sync new strings

--- a/ru.lproj/Localizable.strings
+++ b/ru.lproj/Localizable.strings
@@ -66,6 +66,7 @@
 "Upscaling image..." = "Апсекейлинг изображения...";
 "Loading..." = "Загрузка...";
 "Stopping..." = "Отмена..."; //Stopping upscaling process
+"Processing '%@'..." = "Обработка '%@'..."; //Saving file
 
 
 "Created: %@" = "Создан: %@"; //file created
