German translation reviewed

--- a/de.lproj/Localizable.strings
+++ b/de.lproj/Localizable.strings
@@ -6,185 +6,185 @@
   Copyright © 2025 Andrey Tsarkov. All rights reserved.
 */
 
-"Unable to process image..." = "Unable to process image...";
-"Check avaliable memory and disk space. Try closing other apps and restarting Pixea." = "Check avaliable memory and disk space. Try closing other apps and restarting Pixea.";
-"OK" = "OK"; //A
-"Cancel" = "Abbrechen"; //A
-"macOS 11 or higher is required." = "macOS 11 or higher is required.";
-"macOS 10.15 or higher is required." = "macOS 10.15 or higher is required.";
-"Object Removal algorithm is based on Machine Learning features first introduced with macOS Big Sur. Update your macOS to use Object Removal tool." = "Object Removal algorithm is based on Machine Learning features first introduced with macOS Big Sur. Update your macOS to use Object Removal tool.";
-"Text Selection is based on Machine Learning functionality first introduced with macOS Catalina. Update your macOS to use Text Selection Tool." = "Text Selection is based on Machine Learning functionality first introduced with macOS Catalina. Update your macOS to use Text Selection Tool.";
-"Image Upscaling is based on Machine Learning functionality first introduced with macOS Catalina. Update your macOS to use Image Upscaling." = "Image Upscaling is based on Machine Learning functionality first introduced with macOS Catalina. Update your macOS to use Image Upscaling.";
-"No media" = "No media";
-"No supported media in this folder" = "No supported media in this folder";
-"Are you sure you want to move this folder to Trash?" = "Are you sure you want to move this folder to Trash?";
-"Are you sure you want to move this file to Trash?" = "Are you sure you want to move this file to Trash?";
-"This folder cannot be moved to Trash. Are you sure you want to delete it permanently?" = "This folder cannot be moved to Trash. Are you sure you want to delete it permanently?";
-"This file cannot be moved to Trash. Are you sure you want to delete it permanently?" = "This file cannot be moved to Trash. Are you sure you want to delete it permanently?";
-"\"%@\" will be moved to the Trash." = "\"%@\" will be moved to the Trash.";
-"\"%@\" will be deleted immediately. You can’t undo this action." = "\"%@\" will be deleted immediately. You can’t undo this action.";
-"Move To Trash" = "In den Papierkorb bewegen"; //A
-"Delete" = "Löschen"; //A
-"Unable to delete '%@'" = "Unable to delete '%@'";
-"Check permissions or try again later." = "Check permissions or try again later.";
-"Drop your media here" = "Drop your media here";
-"Drop Image/Video file, Folder or Zip-Archive to start" = "Drop Image/Video file, Folder or Zip-Archive to start";
-"Favorites" = "Favoriten"; //A
-"Recents" = "Kürzlich"; //A
-"Archived Media" = "Archived Media";
-"Media in this Folder" = "Media in this Folder";
-"Subfolders in this Archive" = "Subfolders in this Archive";
-"Subfolders and Archives" = "Subfolders and Archives";
-"Images: %lu" = "Images: %lu";
-"Images: %lu, Videos: %lu" = "Images: %lu, Videos: %lu";
-"Folders: %lu" = "Folders: %lu";
-"Folders: %lu, Archives: %lu" = "Folders: %lu, Archives: %lu";
-"Can't open" = "Can't open";
-"Unable to open this image file" = "Unable to open this image file";
-"Unable to open this video file" = "Unable to open this video file";
-"Unable to open this archive" = "Unable to open this archive";
-"No media" = "No media";
-"No supported media in this archive" = "No supported media in this archive";
-"No supported media in this folder" = "No supported media in this folder";
-"Nothing found" = "Nichts gefunden"; //A
-"Sorry, no matches found for '%@'" = "Sorry, no matches found for '%@'";
-"Image was edited" = "Image was edited";
-"You can choose to export the edited image, or ignore changes. You can’t undo this action." = "You can choose to export the edited image, or ignore changes. You can’t undo this action.";
-"Export Image..." = "Export Image...";
-"Export Image" = "Export Image";
-"Best" = "Best"; //export jpeg quality
-"Lossless" = "Lossless";
-"Ignore Changes" = "Ignore Changes";
-"Unable to process image..." = "Unable to process image...";
-"Unable to find your purchase..." = "Unable to find your purchase...";
-"Check your Apple Account or try again later." = "Check your Apple Account or try again later.";
-"No applications" = "No applications";
+"Unable to process image..." = "Bild kann nicht verarbeitet werden...";
+"Check avaliable memory and disk space. Try closing other apps and restarting Pixea." = "Überprüfen Sie den verfügbaren Arbeitsspeicher und Speicherplatz. Versuchen Sie, andere Apps zu schließen und Pixea neu zu starten.";
+"OK" = "OK";
+"Cancel" = "Abbrechen";
+"macOS 11 or higher is required." = "macOS 11 oder höher ist erforderlich.";
+"macOS 10.15 or higher is required." = "macOS 10.15 oder höher ist erforderlich.";
+"Object Removal algorithm is based on Machine Learning features first introduced with macOS Big Sur. Update your macOS to use Object Removal tool." = "Der Algorithmus zur Objektentfernung basiert auf Funktionen des maschinellen Lernens, die erstmals mit macOS Big Sur eingeführt wurden. Aktualisieren Sie Ihr macOS, um das Werkzeug zur Objektentfernung zu verwenden.";
+"Text Selection is based on Machine Learning functionality first introduced with macOS Catalina. Update your macOS to use Text Selection Tool." = "Die Textauswahl basiert auf der Funktion maschinelles Lernen, die erstmals mit macOS Catalina eingeführt wurde. Aktualisieren Sie Ihr macOS, um das Textauswahl-Werkzeug zu verwenden.";
+"Image Upscaling is based on Machine Learning functionality first introduced with macOS Catalina. Update your macOS to use Image Upscaling." = "Die Bildskalierung basiert auf der Funktion maschinelles Lernen, die erstmals mit macOS Catalina eingeführt wurde. Aktualisieren Sie Ihr macOS, um die Bildskalierung zu verwenden.";
+"No media" = "Keine Medien";
+"No supported media in this folder" = "Keine unterstützten Medien in diesem Ordner";
+"Are you sure you want to move this folder to Trash?" = "Möchten Sie diesen Ordner wirklich in den Papierkorb verschieben?";
+"Are you sure you want to move this file to Trash?" = "Möchten Sie diese Datei wirklich in den Papierkorb verschieben?";
+"This folder cannot be moved to Trash. Are you sure you want to delete it permanently?" = "Dieser Ordner kann nicht in den Papierkorb verschoben werden. Möchten Sie ihn wirklich dauerhaft löschen?";
+"This file cannot be moved to Trash. Are you sure you want to delete it permanently?" = "Diese Datei kann nicht in den Papierkorb verschoben werden. Möchten Sie sie wirklich endgültig löschen?";
+"\"%@\" will be moved to the Trash." = "\"%@\" wird in den Papierkorb verschoben.";
+"\"%@\" will be deleted immediately. You can’t undo this action." = "\"%@\" werden sofort gelöscht. Diese Aktion lässt sich nicht rückgängig machen.";
+"Move To Trash" = "In den Papierkorb verschieben";
+"Delete" = "Löschen";
+"Unable to delete '%@'" = "'%@' löschen nicht möglich";
+"Check permissions or try again later." = "Überprüfen Sie die Berechtigungen oder versuchen Sie es später erneut.";
+"Drop your media here" = "Legen Sie Ihre Medien hier ab";
+"Drop Image/Video file, Folder or Zip-Archive to start" = "Bild-/Videodatei, Ordner oder Zip-Archiv ablegen, um zu starten";
+"Favorites" = "Favoriten";
+"Recents" = "Zuletzt verwendet";
+"Archived Media" = "Archivierte Medien";
+"Media in this Folder" = "Medien in diesem Ordner";
+"Subfolders in this Archive" = "Unterordner in diesem Archiv";
+"Subfolders and Archives" = "Unterordner und Archive";
+"Images: %lu" = "Bilder: %lu";
+"Images: %lu, Videos: %lu" = "Bilder: %lu, Videos: %lu";
+"Folders: %lu" = "Ordner: %lu";
+"Folders: %lu, Archives: %lu" = "Ordner: %lu, Archiv: %lu";
+"Can't open" = "Kann nicht geöffnet werden";
+"Unable to open this image file" = "Diese Bilddatei kann nicht geöffnet werden";
+"Unable to open this video file" = "Diese Videodatei kann nicht geöffnet werden";
+"Unable to open this archive" = "Dieses Archiv kann nicht geöffnet werden";
+"No media" = "Keine Medien";
+"No supported media in this archive" = "Keine unterstützten Medien in diesem Archiv";
+"No supported media in this folder" = "Keine unterstützten Medien in diesem Ordner";
+"Nothing found" = "Nichts gefunden";
+"Sorry, no matches found for '%@'" = "Es wurden leider keine Treffer für '%@' gefunden";
+"Image was edited" = "Bild wurde bearbeitet";
+"You can choose to export the edited image, or ignore changes. You can’t undo this action." = "Sie können das bearbeitete Bild exportieren oder die Änderungen ignorieren. Diese Aktion lässt sich nicht rückgängig machen.";
+"Export Image..." = "Bild exportieren...";
+"Export Image" = "Bild exportieren";
+"Best" = "beste Bildqualität"; //export jpeg quality
+"Lossless" = "Verlustfrei";
+"Ignore Changes" = "Änderungen ignorieren";
+"Unable to process image..." = "Bild kann nicht verarbeitet werden...";
+"Unable to find your purchase..." = "Ihr Kauf konnte nicht gefunden werden...";
+"Check your Apple Account or try again later." = "Überprüfen Sie Ihr Apple-Konto oder versuchen Sie es später erneut.";
+"No applications" = "Keine Anwendungen"; //to check if Bewerbungen or meaning like Application?
 
-"Preparing..." = "Vorbereiten ..."; //A
-"Removing objects..." = "Removing objects...";
-"Processing transparency..." = "Processing transparency...";
-"Upscaling image..." = "Upscaling image...";
-"Loading..." = "Laden ..."; //A
-"Stopping..." = "Stoppen ..."; //A //Stopping upscaling process
-"Processing '%@'..." = "Processing '%@'..."; //Saving file
-
-
-"Created: %@" = "Created: %@"; //file created
-"Taken: %@" = "Taken: %@"; //photo taken
-"Resume at %@" = "Resume at %@"; //resume movie at timestamp
-"Frames" = "Rahmen"; //A //gif frames
+"Preparing..." = "Vorbereiten ...";
+"Removing objects..." = "Objekte entfernen...";
+"Processing transparency..." = "Transparenz bei der Verarbeitung...";
+"Upscaling image..." = "Bild hochskalieren...";
+"Loading..." = "Laden ...";
+"Stopping..." = "Hochskalierung Stoppen ...";
+"Processing '%@'..." = "'%@' wird bearbeitet..."; //Saving file														  
 
 
-"Grant Access" = "Grant Access";
-"No access" = "No access";
-"Access granted" = "Access granted";
-"Pixea needs write permissions to delete '%@'. Click \"Grant Access\" to continue." = "Pixea needs write permissions to delete '%@'. Click \"Grant Access\" to continue.";
-"**SPACE** is reserved for \"**Hold Spacebar and Drag to Scroll**\" and \"**Play / Pause Video**\" actions. **Z** and **⌥Z** are reserved for \"**Zoom In**\" / \"**Zoom Out**\" actions." = "**SPACE** is reserved for \"**Hold Spacebar and Drag to Scroll**\" and \"**Play / Pause Video**\" actions. **Z** and **⌥Z** are reserved for \"**Zoom In**\" / \"**Zoom Out**\" actions.";
+"Created: %@" = "Erstellte: %@"; //file created
+"Taken: %@" = "Aufgenommen: %@"; //photo taken
+"Resume at %@" = "Bei Zeitstempel %@"; //resume movie at timestamp
+"Frames" = "Rahmen"; //gif frames
 
-"Clipboard" = "Zwischenablage"; //A
-"Unmute" = "Stummschaltung aufheben"; //A
-"Mute" = "Ton aus"; //A
+
+"Grant Access" = "Zugriff gewähren";
+"No access" = "Kein Zugriff";
+"Access granted" = "Zugriff gewährt";
+"Pixea needs write permissions to delete '%@'. Click \"Grant Access\" to continue." = "Pixea benötigt Schreibrechte zum Löschen '%@'. Klicken Sie auf \"Zugriff gewähren\" um weiterzumachen.";
+"**SPACE** is reserved for \"**Hold Spacebar and Drag to Scroll**\" and \"**Play / Pause Video**\" actions. **Z** and **⌥Z** are reserved for \"**Zoom In**\" / \"**Zoom Out**\" actions." = "**SPACE** ist reserviert für \"**Zum Scrollen die Leertaste gedrückt halten und ziehen**\" und \"**Video abspielen/anhalten**\" als Aktionen. **Z** und **⌥Z** sind reserviert für \"**Vergrößern**\" / \"**Verkleinern**\" als Aktionen.";
+
+"Clipboard" = "Zwischenablage";
+"Unmute" = "Stummschaltung aufheben";
+"Mute" = "Stummschalten";
 "Track %i - [%@]" = "Track %i - [%@]"; //track 1 - [spanish]
-"Track %i" = "Track %i";
+"Track %i" = "%i verfolgen"; 
 
-"Next" = "Nächster"; //A //button on welcome screen
-"Done" = "Fertig"; //A
+"Next" = "Nächster";
+"Done" = "Fertig";
 
-"Small" = "Klein"; //A
-"Large" = "Groß"; //A
-"Regular" = "Regular";
+"Small" = "Klein";
+"Large" = "Groß";
+"Regular" = "Regulär";
 
 //touch bar items
-"Open File or Folder..." = "Open File or Folder...";
-"Recent:" = "Recent:";
-"New from Clipboard" = "Neu aus der Zwischenablage"; //A
+"Open File or Folder..." = "Datei oder Ordner öffnen...";
+"Recent:" = "Zuletzt verwendete:";
+"New from Clipboard" = "Neu aus der Zwischenablage";
 
 //shortcuts
-"Scroll Up" = "Scroll Up";
-"Scroll Down" = "Scroll Down";
-"Scroll Left" = "Scroll Left";
-"Scroll Right" = "Scroll Right";
-"Previous Media" = "Previous Media";
-"Next Media" = "Next Media";
-"Previous Frame/Step Backward 10s" = "Previous Frame/Step Backward 10s";
-"Next Frame/Step Forward 10s" = "Next Frame/Step Forward 10s";
-"Step Backward 30s" = "Step Backward 30s";
-"Step Forward 30s" = "Step Forward 30s";
-"Volume Up" = "Lauter"; //A
-"Volume Down" = "Leiser"; //A
-"Mute/Unmute" = "Stumm schalten/Stumm schalten aufheben"; //A
-"Slideshow" = "Diashow"; //A
-"Zoom In" = "Vergrößen"; //A
-"Zoom Out" = "Verkleinern"; //A
-"Fit to Screen" = "Fit to Screen";
-"Stretch to Fit" = "Stretch to Fit";
-"Fill Screen" = "Fill Screen";
-"Toggle Fullscreen" = "Toggle Fullscreen";
-"Actual Size" = "Originalgröße"; //A
-"Fixed Size & Position" = "Fixed Size & Position";
-"Playback Speed x 0.5" = "Playback Speed x 0.5";
-"Playback Speed x 0.9" = "Playback Speed x 0.9";
-"Playback Speed Normal" = "Playback Speed Normal";
-"Playback Speed x 1.1" = "Playback Speed x 1.1";
-"Playback Speed x 1.5" = "Playback Speed x 1.5";
-"Playback Speed x 2.0" = "Playback Speed x 2.0";
-"Rotate 180º" = "Rotate 180º";
-"Rotate 90º Clockwise" = "Rotate 90º Clockwise";
-"Rotate 90º Counter-clockwise" = "Rotate 90º Counter-clockwise";
-"Upscale Image" = "Upscale Image";
-"Eraser Tool" = "Eraser Tool";
-"Flip Horizontally" = "Horizontal spiegeln"; //A
-"Flip Vertically" = "Vertikal spiegeln"; //A
-"Selection Tool" = "Selection Tool";
-"Deselect" = "Abwählen"; //A
-"Show Thumbnails" = "Show Thumbnails";
-"Get Info" = "Informationen"; //A
-"Move to Trash" = "In den Papierkorb bewegen"; //A
-"Show in Finder" = "Im Finder anzeigen"; //A
-"Export..." = "Exportieren..."; //A
-"Crop Image..." = "Crop Image...";
-"Hand Tool" = "Hand Tool";
-"Adjust Hue, Saturation, Brightness..." = "Adjust Hue, Saturation, Brightness...";
-"Adjust Color Temperature..." = "Adjust Color Temperature...";
-"Adjust Exposure..." = "Adjust Exposure...";
-"Resize Image..." = "Resize Image...";
-"Sharpness and Noise..." = "Sharpness and Noise...";
-"Clone Tool" = "Klonen-Werkzeug"; //A
-"Text Selection Tool" = "Text Selection Tool";
-"Edit with: App #1" = "Edit with: App #1";
-"Edit with: App #2" = "Edit with: App #2";
-"Edit with: App #3" = "Edit with: App #3";
-"Edit with: App #4" = "Edit with: App #4";
-"Edit with: App #5" = "Edit with: App #5";
-"Step Forward 10s" = "Step Forward 10s";
-"Step Backward 10s" = "Step Backward 10s";
-"Step Forward 30s" = "Step Forward 30s";
-"Step Backward 30s" = "Step Backward 30s";
-"Hide Thumbnails" = "Hide Thumbnails";
-"Show Thumbnails" = "Show Thumbnails";
-"Next Frame" = "Next Frame";
-"Previous Frame" = "Previous Frame";
-"Next Media" = "Next Media";
-"Previous Media" = "Previous Media";
-"Not set" = "Not set";
+"Scroll Up" = "Nach oben scrollen";
+"Scroll Down" = "Nach unten scrollen";
+"Scroll Left" = "Nach links scrollen";
+"Scroll Right" = "Nach rechts scrollen";
+"Previous Media" = "Vorherige Medien";
+"Next Media" = "Nächste Medien";
+"Previous Frame/Step Backward 10s" = "Vorheriger Rahmen/Schritt zurück 10s";
+"Next Frame/Step Forward 10s" = "Nächstes Rahmen/Schritt vorwärts 10s";
+"Step Backward 30s" = "30 Sek. zurückgehen";
+"Step Forward 30s" = "30 Sek. vorwärtsgehen";
+"Volume Up" = "Lautstärke erhöhen";
+"Volume Down" = "Lautstärke verringern";
+"Mute/Unmute" = "Stummschalten/Stummschaltung aufheben";
+"Slideshow" = "Diashow";
+"Zoom In" = "Vergrößern";
+"Zoom Out" = "Verkleinern";
+"Fit to Screen" = "An Bildschirm anpassen";
+"Stretch to Fit" = "Zum Anpassen dehnen";
+"Fill Screen" = "Bildschirm ausfüllen";
+"Toggle Fullscreen" = "Vollbild ein-/ausblenden";
+"Actual Size" = "Tatsächliche Größe";
+"Fixed Size & Position" = "Größe und Position festlegen";
+"Playback Speed x 0.5" = "Wiedergabegeschwindigkeit x 0.5";
+"Playback Speed x 0.9" = "Wiedergabegeschwindigkeit x 0.9";
+"Playback Speed Normal" = "Wiedergabegeschwindigkeit Normal";
+"Playback Speed x 1.1" = "Wiedergabegeschwindigkeit x 1.1";
+"Playback Speed x 1.5" = "Wiedergabegeschwindigkeit x 1.5";
+"Playback Speed x 2.0" = "Wiedergabegeschwindigkeit x 2.0";
+"Rotate 180º" = "180º drehen";
+"Rotate 90º Clockwise" = "90º im Uhrzeigersinn drehen";
+"Rotate 90º Counter-clockwise" = "90º gegen den Uhrzeigersinn drehen";
+"Upscale Image" = "Bild hochskalieren";
+"Eraser Tool" = "Radiergummi-Werkzeug";
+"Flip Horizontally" = "Horizontal spiegeln";
+"Flip Vertically" = "Vertikal spiegeln";
+"Selection Tool" = "Auswahl-Werkzeug";
+"Deselect" = "Auswahl aufheben";
+"Show Thumbnails" = "Miniaturansichten anzeigen";
+"Get Info" = "Informationen anfordern";
+"Move to Trash" = "In den Papierkorb verschieben";
+"Show in Finder" = "Im Finder anzeigen";
+"Export..." = "Exportieren...";
+"Crop Image..." = "Bild zuschneiden...";
+"Hand Tool" = "Hand-Werkzeug";
+"Adjust Hue, Saturation, Brightness..." = "Farbton, Sättigung und Helligkeit anpassen...";
+"Adjust Color Temperature..." = "Farbtemperatur anpassen...";
+"Adjust Exposure..." = "Belichtung anpassen...";
+"Resize Image..." = "Bildgröße ändern...";
+"Sharpness and Noise..." = "Schärfe und Rauschen...";
+"Clone Tool" = "Klon-Werkzeug";
+"Text Selection Tool" = "Textauswahl-Werkzeug";
+"Edit with: App #1" = "Mit: App #1 bearbeiten";
+"Edit with: App #2" = "Mit: App #2 bearbeiten";
+"Edit with: App #3" = "Mit: App #3 bearbeiten";
+"Edit with: App #4" = "Mit: App #4 bearbeiten";
+"Edit with: App #5" = "Mit: App #5 bearbeiten";
+"Step Forward 10s" = "10 Sek. vorwärtsgehen";
+"Step Backward 10s" = "10 Sek. zurückgehen";
+"Step Forward 30s" = "30 Sek. vorwärtsgehen";
+"Step Backward 30s" = "30 Sek. zurückgehen";
+"Hide Thumbnails" = "Miniaturansichten verstecken";
+"Show Thumbnails" = "Miniaturansichten anzeigen";
+"Next Frame" = "Nächster Rahmen";
+"Previous Frame" = "Vorheriger Rahmen";
+"Next Media" = "Nächste Medien";
+"Previous Media" = "Vorherige Medien";
+"Not set" = "Nicht festgelegt";
 
 // Preferences items
-"Preferences" = "Einstellungen"; //A
-"General" = "Allgemein"; //A
-"Shortcuts" = "Shortcuts";
-"File Types" = "File Types";
-"Video" = "Video"; //A
-"Folder Access" = "Folder Access";
-"Advanced" = "Erweitert"; //A
-"More Apps" = "More Apps";
+"Preferences" = "Einstellungen";
+"General" = "Allgemein";
+"Shortcuts" = "Verknüpfungen";
+"File Types" = "Dateitypen";
+"Video" = "Video";
+"Folder Access" = "Ordnerzugriff";
+"Advanced" = "Erweitert";
+"More Apps" = "Weitere Anwendungen";
 
 
 // inches, cm/mm, pixels, points per inch, etc...
-"in" = "in"; //A
-"mm" = "mm"; //A
-"cm" = "cm"; //A
-"px" = "px"; //A
+"in" = "in";
+"mm" = "mm";
+"cm" = "cm";
+"px" = "px";
 "%ipx × %ipx" = "%ipx × %ipx";
 "%ipx × %ipx (%ippi)" = "%ipx × %ipx (%ippi)";
-"%@ bytes" = "%@ bytes";
-"%li sec" = "%li sec";
+"%@ bytes" = "%@ Bytes";
+"%li sec" = "%li Sek";
