--- a/de.lproj/PermissionsAccessoryView.strings
+++ b/de.lproj/PermissionsAccessoryView.strings
@@ -1,3 +1,3 @@
 
 /* Class = "NSTextFieldCell"; title = "Pixea would like to access files in the selected image folder. Allow this to look for additional images for the slideshow and quick browsing. Click \"Grant Access\" to continue."; ObjectID = "Omr-FE-Xlm"; */
-"Omr-FE-Xlm.title" = "Pixea would like to access files in the selected image folder. Allow this to look for additional images for the slideshow and quick browsing. Click \"Grant Access\" to continue.";
+"Omr-FE-Xlm.title" = "Pixea möchte auf Dateien im ausgewählten Bildordner zugreifen. Erlauben Sie dies, um nach weiteren Bildern für die Diashow und zum schnellen Durchsuchen zu suchen. Klicken Sie auf \"Zugriff gewähren\" , um fortzufahren.";
