--- a/ru.lproj/PermissionsAccessoryView.strings
+++ b/ru.lproj/PermissionsAccessoryView.strings
@@ -1,3 +1,3 @@
 
 /* Class = "NSTextFieldCell"; title = "Pixea would like to access files in the selected image folder. Allow this to look for additional images for the slideshow and quick browsing. Click \"Grant Access\" to continue."; ObjectID = "Omr-FE-Xlm"; */
-"Omr-FE-Xlm.title" = "Pixea would like to access files in the selected image folder. Allow this to look for additional images for the slideshow and quick browsing. Click \"Grant Access\" to continue.";
+"Omr-FE-Xlm.title" = "Pixea хочет получить доступ к файлам в выбранной папке изображений. Разрешите поиск дополнительных изображений для слайд-шоу и быстрого просмотра. Нажмите «Предоставить доступ», чтобы продолжить.";
