--- a/ru.lproj/preferencesAccessSheetController.strings
+++ b/ru.lproj/preferencesAccessSheetController.strings
@@ -1,6 +1,6 @@
 
 /* Class = "NSTextFieldCell"; title = "Grant or revoke the access:"; ObjectID = "Dbc-8H-lMa"; */
-"Dbc-8H-lMa.title" = "Grant or revoke the access:";
+"Dbc-8H-lMa.title" = "Предоставить или отозвать доступ:";
 
 /* Class = "NSButtonCell"; title = "Done"; ObjectID = "F31-ys-eOi"; */
 "F31-ys-eOi.title" = "Готово"; //A
