--- a/ru.lproj/preferencesAccessViewController.strings
+++ b/ru.lproj/preferencesAccessViewController.strings
@@ -1,12 +1,12 @@
 
 /* Class = "NSTextFieldCell"; title = "When you open any image or video, Pixea tries to scan the file's parent folder for other media. If permission was not granted before, the dialog requesting you to grant access is displayed."; ObjectID = "9uZ-Tb-YpY"; */
-"9uZ-Tb-YpY.title" = "When you open any image or video, Pixea tries to scan the file's parent folder for other media. If permission was not granted before, the dialog requesting you to grant access is displayed.";
+"9uZ-Tb-YpY.title" = "Когда вы открываете любое изображение или видео, Pixea пытается просканировать родительскую папку файла на наличие других медиафайлов. Если разрешение не было предоставлено ранее, отображается диалоговое окно с просьбой предоставить доступ.";
 
 /* Class = "NSButtonCell"; title = "Grant Access"; ObjectID = "C3O-re-5e7"; */
-"C3O-re-5e7.title" = "Grant Access";
+"C3O-re-5e7.title" = "Предоставить доступ";
 
 /* Class = "NSTextFieldCell"; title = "Pixea won't show \"Grant Access\" dialog when opening individual files if this option is unchecked. You will need to open a folder instead of an individual file to enable slideshow and media browsing features."; ObjectID = "C96-9R-xlJ"; */
-"C96-9R-xlJ.title" = "Pixea won't show \"Grant Access\" dialog when opening individual files if this option is unchecked. You will need to open a folder instead of an individual file to enable slideshow and media browsing features.";
+"C96-9R-xlJ.title" = "Pixea не будет показывать диалоговое окно \"Предоставить доступ\" при открытии отдельных файлов, если эта опция не отмечена. Вам нужно будет открыть папку вместо отдельного файла, чтобы включить функции слайд-шоу и просмотра медиа.";
 
 /* Class = "NSTextFieldCell"; title = "Text Cell"; ObjectID = "Dzl-eQ-UQN"; */
 "Dzl-eQ-UQN.title" = "Text Cell"; //A //A
@@ -18,16 +18,16 @@
 "Vjm-4n-4X9.title" = "Ящик"; //A
 
 /* Class = "NSButtonCell"; title = "Ask for folder access when opening images"; ObjectID = "cW7-h4-Cgz"; */
-"cW7-h4-Cgz.title" = "Ask for folder access when opening images";
+"cW7-h4-Cgz.title" = "Запрашивать доступ к папке при открытии изображений";
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "nBi-vL-aCO"; */
 "nBi-vL-aCO.title" = "Ящик"; //A
 
 /* Class = "NSTextFieldCell"; title = "Allow Pixea to look for additional images and videos for the slideshow and quickly browse the following folders:"; ObjectID = "r28-NY-wGI"; */
-"r28-NY-wGI.title" = "Allow Pixea to look for additional images and videos for the slideshow and quickly browse the following folders:";
+"r28-NY-wGI.title" = "Разрешите Pixea искать дополнительные изображения и видео для слайд-шоу и быстро просматривать следующие папки:";
 
 /* Class = "NSButtonCell"; title = "Manage Access..."; ObjectID = "sLh-AK-fC7"; */
-"sLh-AK-fC7.title" = "Manage Access...";
+"sLh-AK-fC7.title" = "Управление доступом...";
 
 /* Class = "NSTableColumn"; headerCell.title = "Folder"; ObjectID = "yrv-wp-W9z"; */
 "yrv-wp-W9z.headerCell.title" = "Папка"; //A
