--- a/ru.lproj/preferencesGeneralViewController.strings
+++ b/ru.lproj/preferencesGeneralViewController.strings
@@ -3,40 +3,40 @@
 "2Iy-x3-QKJ.title" = "Ящик"; //A
 
 /* Class = "NSButtonCell"; title = "Keep always on top"; ObjectID = "5KC-MQ-7fc"; */
-"5KC-MQ-7fc.title" = "Keep always on top";
+"5KC-MQ-7fc.title" = "Поверх других окон";
 
 /* Class = "NSButtonCell"; title = "Automatically switch to full screen"; ObjectID = "6rx-de-30V"; */
-"6rx-de-30V.title" = "Automatically switch to full screen";
+"6rx-de-30V.title" = "Автоматически переключаться в полноэкранный режим";
 
 /* Class = "NSButtonCell"; title = "List recently opened items"; ObjectID = "7qn-T7-ruB"; */
-"7qn-T7-ruB.title" = "List recently opened items";
+"7qn-T7-ruB.title" = "Список недавно открытых элементов";
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "7vn-qv-CEQ"; */
 "7vn-qv-CEQ.title" = "Ящик"; //A
 
 /* Class = "NSTextFieldCell"; title = "Default zoom"; ObjectID = "8R8-C7-F4i"; */
-"8R8-C7-F4i.title" = "Default zoom";
+"8R8-C7-F4i.title" = "Масштаб по умолчанию";
 
 /* Class = "NSTextFieldCell"; title = "Sort media files by"; ObjectID = "8gm-BS-eqC"; */
-"8gm-BS-eqC.title" = "Sort media files by";
+"8gm-BS-eqC.title" = "Сортировать медиафайлы по";
 
 /* Class = "NSButtonCell"; title = "Points"; ObjectID = "91x-64-bJ9"; */
-"91x-64-bJ9.title" = "Точки"; //A
+"91x-64-bJ9.title" = "Поинты";
 
 /* Class = "NSButtonCell"; title = "Date added"; ObjectID = "Cic-3u-pg5"; */
-"Cic-3u-pg5.title" = "Date added";
+"Cic-3u-pg5.title" = "Дата добавления";
 
 /* Class = "NSButtonCell"; title = "Date modified"; ObjectID = "CzN-fp-7TW"; */
-"CzN-fp-7TW.title" = "Date modified";
+"CzN-fp-7TW.title" = "Дата изменения";
 
 /* Class = "NSTextFieldCell"; title = "Stretch to Fit"; ObjectID = "EER-jc-phA"; */
-"EER-jc-phA.title" = "Stretch to Fit";
+"EER-jc-phA.title" = "Растянуть до размера экрана";
 
 /* Class = "NSButtonCell"; title = "Manage Access..."; ObjectID = "F74-M3-Cci"; */
-"F74-M3-Cci.title" = "Manage Access...";
+"F74-M3-Cci.title" = "Управление доступом...";
 
 /* Class = "NSButtonCell"; title = "Always show confirmation"; ObjectID = "FI4-Lc-u0F"; */
-"FI4-Lc-u0F.title" = "Always show confirmation";
+"FI4-Lc-u0F.title" = "Всегда показывать подтверждение";
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "FYT-hM-LhR"; */
 "FYT-hM-LhR.title" = "Ящик"; //A
@@ -45,85 +45,85 @@
 "HTQ-0l-YJx.title" = "Ящик"; //A
 
 /* Class = "NSButtonCell"; title = "File size"; ObjectID = "Kdj-tC-acJ"; */
-"Kdj-tC-acJ.title" = "File size";
+"Kdj-tC-acJ.title" = "Размеру файла";
 
 /* Class = "NSButtonCell"; title = "Date created"; ObjectID = "Lap-1k-DOH"; */
-"Lap-1k-DOH.title" = "Date created";
+"Lap-1k-DOH.title" = "Дате создания";
 
 /* Class = "NSButtonCell"; title = "Open each image in a new window"; ObjectID = "NqL-Ko-d7J"; */
-"NqL-Ko-d7J.title" = "Open each image in a new window";
+"NqL-Ko-d7J.title" = "Открыть каждое изображение в новом окне";
 
 /* Class = "NSButtonCell"; title = "PLUS"; ObjectID = "P6g-Y3-rh2"; */
 "P6g-Y3-rh2.title" = "PLUS";
 
 /* Class = "NSButtonCell"; title = "Always ask to save changes"; ObjectID = "QJA-jW-OZO"; */
-"QJA-jW-OZO.title" = "Always ask to save changes";
+"QJA-jW-OZO.title" = "Всегда спрашивать сохранение изменений";
 
 /* Class = "NSButtonCell"; title = "Use existing window for the same folder"; ObjectID = "Sc4-2j-8ms"; */
-"Sc4-2j-8ms.title" = "Use existing window for the same folder";
+"Sc4-2j-8ms.title" = "Использовать существующее окно для той же папки";
 
 /* Class = "NSTextFieldCell"; title = "Actual Size"; ObjectID = "UsA-ZU-Slq"; */
-"UsA-ZU-Slq.title" = "Реальный размер"; //A
+"UsA-ZU-Slq.title" = "Реальный размер";
 
 /* Class = "NSButtonCell"; title = "Automatically set sort mode based on Finder's sort column"; ObjectID = "VDb-Ze-X4P"; */
-"VDb-Ze-X4P.title" = "Automatically set sort mode based on Finder's sort column";
+"VDb-Ze-X4P.title" = "Автоматически устанавливать режим сортировки как в Finder";
 
 /* Class = "NSButtonCell"; title = "Keep aspect ratio when resizing"; ObjectID = "Wf9-JJ-N3n"; */
-"Wf9-JJ-N3n.title" = "Keep aspect ratio when resizing";
+"Wf9-JJ-N3n.title" = "Сохраняйть пропорции при изменении размера";
 
 /* Class = "NSButtonCell"; title = "Shuffle"; ObjectID = "XQe-uj-4X2"; */
-"XQe-uj-4X2.title" = "Перемешать"; //A
+"XQe-uj-4X2.title" = "Перемешать";
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "ato-UQ-pb9"; */
 "ato-UQ-pb9.title" = "Ящик"; //A
 
 /* Class = "NSTextFieldCell"; title = "Deleting files and folders"; ObjectID = "gsV-rn-zs2"; */
-"gsV-rn-zs2.title" = "Deleting files and folders";
+"gsV-rn-zs2.title" = "Удаление файлов и папок";
 
 /* Class = "NSTextFieldCell"; title = "Fill Screen"; ObjectID = "h84-vw-CFX"; */
-"h84-vw-CFX.title" = "Fill Screen";
+"h84-vw-CFX.title" = "Заполнить экран";
 
 /* Class = "NSButtonCell"; title = "Quit Pixea when last window is closed"; ObjectID = "hek-kW-9le"; */
-"hek-kW-9le.title" = "Quit Pixea when last window is closed";
+"hek-kW-9le.title" = "Выйти из Pixea после закрытия последнего окна";
 
 /* Class = "NSTextFieldCell"; title = "When opening images"; ObjectID = "iQo-Fc-BOp"; */
-"iQo-Fc-BOp.title" = "When opening images";
+"iQo-Fc-BOp.title" = "При открытии изображений";
 
 /* Class = "NSButtonCell"; title = "File type"; ObjectID = "j2E-63-h1q"; */
-"j2E-63-h1q.title" = "File type";
+"j2E-63-h1q.title" = "Типу файла";
 
 /* Class = "NSButtonCell"; title = "Pixels"; ObjectID = "jNp-fN-bqc"; */
-"jNp-fN-bqc.title" = "Пиксели"; //A
+"jNp-fN-bqc.title" = "Пиксели";
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "k7Y-lM-Atq"; */
-"k7Y-lM-Atq.title" = "Ящик"; //A
+"k7Y-lM-Atq.title" = "Ящик";
 
 /* Class = "NSButtonCell"; title = "Name"; ObjectID = "lKi-Hv-8WF"; */
-"lKi-Hv-8WF.title" = "Имя"; //A
+"lKi-Hv-8WF.title" = "Имени";
 
 /* Class = "NSTextFieldCell"; title = "Recent items"; ObjectID = "lmr-B1-vI2"; */
-"lmr-B1-vI2.title" = "Recent items";
+"lmr-B1-vI2.title" = "Недавно окрытые элементы";
 
 /* Class = "NSTextFieldCell"; title = "Editing images"; ObjectID = "m2J-xa-kiP"; */
-"m2J-xa-kiP.title" = "Editing images";
+"m2J-xa-kiP.title" = "Редактирование изображений";
 
 /* Class = "NSTextFieldCell"; title = "If this option is selected, Pixea will sort the contents based on the preferences set in your file system. By default, this option applies to subfolders only, as the sort information for any folder is stored in its parent's attributes. If you want to apply automatic sorting to your root folder, grant permission to access its parent."; ObjectID = "mw4-Oi-R2y"; */
-"mw4-Oi-R2y.title" = "If this option is selected, Pixea will sort the contents based on the preferences set in your file system. By default, this option applies to subfolders only, as the sort information for any folder is stored in its parent's attributes. If you want to apply automatic sorting to your root folder, grant permission to access its parent.";
+"mw4-Oi-R2y.title" = "Если выбран этот параметр, Pixea будет сортировать содержимое на основе настроек, установленных в вашей файловой системе. По умолчанию этот параметр применяется только к подпапкам, поскольку информация о сортировке для любой папки хранится в атрибутах ее родительской папки. Если вы хотите применить автоматическую сортировку к своей корневой папке, предоставьте разрешение на доступ к ее родительской папке.";
 
 /* Class = "NSButtonCell"; title = "PLUS"; ObjectID = "p97-VP-ELd"; */
 "p97-VP-ELd.title" = "PLUS";
 
 /* Class = "NSButtonCell"; title = "Use existing window for any folder"; ObjectID = "qwJ-si-VBu"; */
-"qwJ-si-VBu.title" = "Use existing window for any folder";
+"qwJ-si-VBu.title" = "Использовать существующее окно для любой папки";
 
 /* Class = "NSTextFieldCell"; title = "Window"; ObjectID = "rba-Lk-QXc"; */
 "rba-Lk-QXc.title" = "Окно"; //A
 
 /* Class = "NSTextFieldCell"; title = "Fixed Size and Position"; ObjectID = "yYH-QK-MpA"; */
-"yYH-QK-MpA.title" = "Fixed Size and Position";
+"yYH-QK-MpA.title" = "Фиксированный размер и положение";
 
 /* Class = "NSTextFieldCell"; title = "Actual Size"; ObjectID = "ysg-55-8kg"; */
-"ysg-55-8kg.title" = "Реальный размер"; //A
+"ysg-55-8kg.title" = "Реальный размер";
 
 /* Class = "NSTextFieldCell"; title = "Fit To Screen"; ObjectID = "zXk-De-iOY"; */
-"zXk-De-iOY.title" = "Fit To Screen";
+"zXk-De-iOY.title" = "По размеру экрана";
