--- a/ru.lproj/preferencesShortcutsViewController.strings
+++ b/ru.lproj/preferencesShortcutsViewController.strings
@@ -1,12 +1,12 @@
 
 /* Class = "NSTextFieldCell"; title = "Customize Pixea shortcuts:"; ObjectID = "9KK-3t-xZD"; */
-"9KK-3t-xZD.title" = "Customize Pixea shortcuts:";
+"9KK-3t-xZD.title" = "Настройте сочетания клавиш Pixea:";
 
 /* Class = "NSTableColumn"; headerCell.title = "Folder"; ObjectID = "UZU-so-m59"; */
 "UZU-so-m59.headerCell.title" = "Папка"; //A
 
 /* Class = "NSTextFieldCell"; title = "Next Image"; ObjectID = "VUf-W6-3O0"; */
-"VUf-W6-3O0.title" = "Next Image";
+"VUf-W6-3O0.title" = "Следующее изображение";
 
 /* Class = "NSButtonCell"; title = "PLUS"; ObjectID = "m9I-Wa-c89"; */
 "m9I-Wa-c89.title" = "PLUS";
@@ -15,10 +15,10 @@
 "pva-Kw-3Xm.title" = "Text Cell"; //A //A
 
 /* Class = "NSTextFieldCell"; title = "SPACE is reserved for \"Hold Spacebar and Drag to Scroll\" and \"Play / Pause Video\" actions. Z and ⌥Z are reserved for \"Zoom In\" / \"Zoom Out\" actions."; ObjectID = "r8b-mT-VMR"; */
-"r8b-mT-VMR.title" = "SPACE is reserved for \"Hold Spacebar and Drag to Scroll\" and \"Play / Pause Video\" actions. Z and ⌥Z are reserved for \"Zoom In\" / \"Zoom Out\" actions.";
+"r8b-mT-VMR.title" = "ПРОБЕЛ зарезервирован для действий \"Удерживайте пробел + перетаскивайте\" и \"Воспроизвести / Приостановить видео\". Z и ⌥Z зарезервированы для действий \"Увеличить\" / \"Уменьшить\".";
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "wqY-nK-Suo"; */
 "wqY-nK-Suo.title" = "Ящик"; //A
 
 /* Class = "NSButtonCell"; title = "Swipe left/right to show previous/next image"; ObjectID = "xDv-OG-qlV"; */
-"xDv-OG-qlV.title" = "Swipe left/right to show previous/next image";
+"xDv-OG-qlV.title" = "Свайп влево/вправо, чтобы показать предыдущее/следующее изображение";
