Pixea 6.1 strings freeze

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -7,7 +7,7 @@
 */
 
 "Unable to process image..." = "Unable to process image...";
-"Check avaliable memory and disk space. Try closing other apps and restarting Pixea." = "Check avaliable memory and disk space. Try closing other apps and restarting Pixea.";
+"Check available memory and disk space. Try closing other apps and restarting Pixea." = "Check available memory and disk space. Try closing other apps and restarting Pixea.";
 "OK" = "OK";
 "Cancel" = "Cancel";
 "macOS 11 or higher is required." = "macOS 11 or higher is required.";
